# study

./: .gitignore  README.md  README.ua.md  SFML.sln
cpp/SFML/GameOfLife/: CMakeLists.txt
cpp/SFML/GameOfLife/.cache/clangd/index/: Angle.inl.7A2515C5436B9DD7.idx  BlendMode.hpp.9F0DA4F58CFBACC5.idx  CircleShape.hpp.3AD3638C5A5A8B49.idx  CircleShape.hpp.A860E75AA713EDC4.idx  Clipboard.hpp.27ADC60EFAE586CC.idx  Clipboard.hpp.F2F536CBC40F27D8.idx  Clock.hpp.275E8AB710633CA3.idx  Clock.hpp.58C037F23BDDF17A.idx  Color.inl.1FAC6DC35367F1F8.idx  Config.hpp.01284D77294278EB.idx  Context.hpp.D83176F3E9612F11.idx  Context.hpp.DFCC18AFBB90A49D.idx  ContextSettings.hpp.F14E3826B52C0A2E.idx  ConvexShape.hpp.9F96559B742EDA4D.idx  ConvexShape.hpp.A68ACC489D8C0228.idx  CoordinateType.hpp.5DCF1916FFF26A96.idx  Cursor.hpp.6379F4CB9B7E6F7D.idx  Cursor.hpp.9146993AABCA49D9.idx  Drawable.hpp.E46EA7E68634DB95.idx  Event.inl.4DFF09152F024D2C.idx  Event.inl.65D021637E9D4AF3.idx  Export.hpp.902C66757274C52C.idx  Export.hpp.E92AEE4EE05D61D8.idx  Export.hpp.FA061EFE8CE73840.idx  FileInputStream.hpp.5DD56C628DFFBDD4.idx  FileInputStream.hpp.63239F67517D3739.idx  Font.hpp.CC7DEC616B8E2985.idx  Game.cpp.299A7E1F435026DA.idx  Game.h.0E4F6FBB19405120.idx  Game.h.9C99A7C76D75262E.idx  GameState.cpp.1D6FB50742D0D5BC.idx  GameState.h.11C4F033C6793744.idx  Glsl.hpp.3901F8A3E717A1C1.idx  Graphics.hpp.4084FD0984EF21E9.idx  Image.hpp.2D2FADA726644205.idx  InputStream.hpp.25413B260AD821D7.idx  InputStream.hpp.2B6F0012EEFFFC27.idx  (+52 more)
cpp/SFML/GameOfLife/src/: Game.cpp  Game.h  GameState.cpp  GameState.h  main.cpp
(+801 files in other folders)
